--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "easy-peasy-bot",
+  "name": "admiral-snackbar",
   "version": "1.0.0",
-  "description": "The awesomest bot evar.",
+  "description": "It's a snack!",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -9,18 +9,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DEGoodmanWilson/easy-peasy-bot-app.git"
+    "url": "git+https://github.com/mattniemczyk/admiral-snackbar"
   },
   "keywords": [
     "slack",
     "bot"
   ],
-  "author": "D.E. Goodman-Wilson",
-  "license": "MIT",
+  "author": "Matt Niemczyk",
   "bugs": {
-    "url": "https://github.com/DEGoodmanWilson/easy-peasy-bot-app/issues"
+    "url": "https://github.com/mattniemczyk/admiral-snackbar/issues"
   },
-  "homepage": "https://github.com/DEGoodmanWilson/easy-peasy-bot-app#readme",
+  "homepage": "https://github.com/mattniemczyk/admiral-snackbar#readme",
   "engines": {
     "node": "5.1.1"
   },
